Bug 320821 - kabc/plugins/ldapkio/ uses old Kolab LDAP option, also Kolab 3 options are missing
Summary: kabc/plugins/ldapkio/ uses old Kolab LDAP option, also Kolab 3 options are mi...
Status: RESOLVED FIXED
Alias: None
Product: kdepimlibs
Classification: Applications
Component: kabc (other bugs)
Version First Reported In: GIT (master)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-06 15:07 UTC by Aeneas Jaißle
Modified: 2014-06-26 11:30 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14
Sentry Crash Report:


Attachments
Patch to add Kolab 3 options to ldapkio (2.20 KB, patch)
2013-06-06 15:07 UTC, Aeneas Jaißle
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aeneas Jaißle 2013-06-06 15:07:16 UTC
kabc/plugins/ldapkio/ contains various presents for LDAP Groupware connectivity.
In the current git master, there is a preset called "Kolab", that contains options (LDAP attribute mappings) not valid for current Kolab releases.

Attached is a patch that modifies ldapkio/resourceldapkioconfig.* (it's the LDAP attribute configuration menu in KMail/Akonadi). 
It replaces the option "Kolab" with an option "Kolab 2" and adds another option "Kolab 3".
Kolab 3 uses an email alias attribute "alias" (Kolab 2 used "mailalias") and formattedName attribute "displayName" (this is the default for ldapkio; Kolab 2 used "display-name").

Reproducible: Always

Steps to Reproduce:
1. Add a new address book in Kontact or Akonadi
2. Choose KDE Address Book -> LDAP
3. Change attributes and look at the presets
Actual Results:  
Preset for Kolab is not valid for Kolab 3

Expected Results:  
Preset should be valid for Kolab 3 or at least differ between Kolab 2 and Kolab 3.
Comment 1 Aeneas Jaißle 2013-06-06 15:07:48 UTC
Created attachment 80345 [details]
Patch to add Kolab 3 options to ldapkio
Comment 2 Christophe Marin 2013-06-09 21:25:17 UTC
Christian: your opinion on this patch ?
Comment 3 Christian Mollekopf 2013-06-12 08:03:43 UTC
If it has been tested I can go in from my side. I know something is off for kolab3, but lack the time this week to follow up. I can have a look next week.
Comment 4 Christian Mollekopf 2013-06-20 15:39:53 UTC
Git commit 9116ad57accb39b2ae06fc9d03a603f6b2abf512 by Christian Mollekopf.
Committed on 19/06/2013 at 11:42.
Pushed by cmollekopf into branch 'master'.

Add correct ldap defaults for kolab 3

Patch by Aeneas Jaißle

M  +10   -6    kabc/plugins/ldapkio/resourceldapkioconfig.cpp
M  +2    -1    kabc/plugins/ldapkio/resourceldapkioconfig.h

http://commits.kde.org/kdepimlibs/9116ad57accb39b2ae06fc9d03a603f6b2abf512
Comment 5 Allen Winter 2013-06-21 22:41:59 UTC
since you reverted the commit, we need to reopen this. right?
Comment 6 Allen Winter 2013-06-21 22:42:31 UTC
although in my opinion the message text changes are so small we should ask the translators for an exception.
Comment 7 Laurent Montel 2014-06-26 11:30:29 UTC
Git commit 133730159259a47ca332dd2ea4fe0739cf61a979 by Montel Laurent.
Committed on 26/06/2014 at 11:29.
Pushed by mlaurent into branch 'master'.

Fix Bug 320821 - kabc/plugins/ldapkio/ uses old Kolab LDAP option, also Kolab 3 options are missing
FIXED-IN: 4.14

Reapply patch which was reverted because it added new i18n. It's time to readd it

M  +11   -7    kabc/plugins/ldapkio/resourceldapkioconfig.cpp
M  +2    -1    kabc/plugins/ldapkio/resourceldapkioconfig.h

http://commits.kde.org/kdepimlibs/133730159259a47ca332dd2ea4fe0739cf61a979