Fix Bug 320821 - kabc/plugins/ldapkio/ uses old Kolab LDAP option, also Kolab 3 options are missing

BUG: 320821
FIXED-IN: 4.14

Reapply patch which was reverted because it added new i18n. It's time to readd it